<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_promesa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lucaezc.promesas.RecepcionPromesa">

    <ImageButton
        android:id="@+id/IbCopiar"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/copiarTooltip"
        android:onClick="copiarPortapapeles"
        android:scaleType="fitCenter"
        android:background="#00000000"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boton_copiar" />

    <ImageButton
        android:id="@+id/IbDescargarImagen"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descargarTooltip"
        android:onClick="descargarImagen"
        android:scaleType="fitCenter"
        android:background="#00000000"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boton_guardar_imagen" />

    <Button
        android:id="@+id/recibirPromesa"
        android:layout_width="214dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/botonvolver"
        android:onClick="volver"
        android:text="@string/volver"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="149dp"
        android:padding="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/palabra"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVersiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/versiculo"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/recibirPromesa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPalabra"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/IbCompartir"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/compartirTooltip"
        android:onClick="compartirPromesa"
        android:scaleType="fitCenter"
        android:background="#00000000"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boton_compartir" />

</android.support.constraint.ConstraintLayout>
