<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lucaezc.promesas.MenuPrincipal">

    <Button
        android:id="@+id/recibirPromesa"
        android:layout_width="326dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/botonrecibir"
        android:onClick="recibirPromesa"
        android:text="@string/recibirPromesa"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.983"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/spTemas"
        android:layout_width="195dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintRight_toRightOf="@+id/recibirPromesa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <TextView
        android:id="@+id/tvTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/tema"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="@+id/recibirPromesa"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.82"
        android:layout_marginStart="0dp" />

    <Spinner
        android:id="@+id/spVersiones"
        android:layout_width="326dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.752"
        app:layout_constraintLeft_toLeftOf="@+id/tvTema" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/versionTitulo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="@+id/spVersiones"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintVertical_bias="0.698" />

    <CheckBox
        android:id="@+id/cbTema"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintVertical_bias="0.823"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/IvPromesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/spVersiones"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/promesas_logo" />
</android.support.constraint.ConstraintLayout>
